# SimpleClassSort_By_QT

./: CMakeLists.txt  README.md  iniFiles.rar  main.cpp
Forms/: a_mainwindow.ui  classtable.ui  editapply.ui  examineapply.ui  examineraiseplan.ui  mainwindow.ui  register.ui  userapply.ui  widget.ui
Sources/: Interface.cpp  Interface.h  Login.cpp  Login.h  a_childThread.cpp  a_childThread.h  a_mainwindow.cpp  a_mainwindow.h  apply.cpp  apply.h  childThread.cpp  childThread.h  course.cpp  course.h  courseTable.cpp  courseTable.h  editapply.cpp  editapply.h  examineapply.cpp  examineapply.h  examineraiseplan.cpp  examineraiseplan.h  mainwindow.cpp  mainwindow.h  raisePlan.cpp  raisePlan.h  register.cpp  register.h  userapply.cpp  userapply.h  utils.cpp  utils.h
